--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~3.1.3",
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.1.10",
+    "@react-navigation/stack": "^6.3.25",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "cors": "^2.8.5",
