--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.3.29",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
