--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/stack": "^6.3.29",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@stripe/react-stripe-js": "^2.7.0",
+    "@stripe/stripe-js": "^3.3.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "expo": "~50.0.7",
@@ -31,7 +33,8 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "stripe": "^14.24.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
