--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.1.10",
-    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/stack": "^6.3.29",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
@@ -27,6 +27,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-events-calendar": "^1.0.8",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "~3.29.0",
