--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-events-calendar": "^1.0.8",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
