--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@expo/webpack-config": "^19.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.1.10",
@@ -30,14 +31,13 @@
     "react-native-elements": "^3.4.3",
     "react-native-events-calendar": "^1.0.8",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-modal": "^13.0.1",
     "react-native-image-picker": "^7.1.2",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
-    "stripe": "^14.24.0",
-    "@expo/webpack-config": "^19.0.0"
+    "stripe": "^14.24.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
